# calculator

./: .gitignore  CLAUDE.md  README.md  claude_md_vs_rules.md  coverage_output.txt  debug_advanced.py  debug_demo.py  docs_output.txt  git_output.txt  install_output.txt  install_venv.txt  pyproject.toml  test_output.txt  upgrade_pip.txt
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  mode-recommender.md  spec-writer.md  test-writer.md
.claude/rules/: core.md  gui.md  testing.md
docs/: Makefile  conf.py  index.rst
docs/api/: cli.rst  core.rst  history.rst
docs/guides/: installation.rst  usage.rst
reviews/: unit_conversion_mode_review.md
specs/: next_mode_recommendation.md  programmer_mode.md  unit_conversion_mode.md
src/calculator/: CLAUDE.md  __init__.py  cli.py  converter.py  core.py  gui.py  history.py  programmer.py  programmer_parser.py
tests/: CLAUDE.md  __init__.py  conftest.py  test_cli.py  test_converter.py  test_converter_gui.py  test_core.py  test_gui.py  test_history.py  test_programmer.py  test_programmer_parser.py
vs_tutorials/: AdvancedDebugConsoleFeatures.md
